tests/baselines/reference/superInLambdas(target=es2015).errors.txt
superInLambdas.ts(47,49): error TS2855: Class field 'name' defined by the parent class is not accessible in the child class via super.
superInLambdas.ts(51,49): error TS2855: Class field 'name' defined by the parent class is not accessible in the child class via super.
superInLambdas.ts(61,34): error TS1034: 'super' must be followed by an argument list or member access.
superInLambdas.ts(65,34): error TS1034: 'super' must be followed by an argument list or member access.


==== superInLambdas.ts (4 errors) ====
    class User {
        name: string = "Bob";
        sayHello(): void {
            //console.log("Hello, " + this.name);
        }
    }
    
    class RegisteredUser extends User {
        name: string = "Frank";
        constructor() {
            super();
    
            // super call in a constructor
            super.sayHello();
    
            // super call in a lambda in a constructor 
            var x = () => super.sayHello();
        }
        sayHello(): void {
            // super call in a method
            super.sayHello();
    
            // super call in a lambda in a method
           var x = () => super.sayHello();
        }
    }
    class RegisteredUser2 extends User {
        name: string = "Joe";
        constructor() {
            super();
    
            // super call in a nested lambda in a constructor 
            var x = () => () => () => super.sayHello();
        }
        sayHello(): void {
            // super call in a nested lambda in a method
            var x = () => () => () => super.sayHello();
        }
    }
    
    class RegisteredUser3 extends User {
        name: string = "Sam";
        constructor() {
            super();
    
            // super property in a nested lambda in a constructor 
            var superName = () => () => () => super.name;
                                                    ~~~~
!!! error TS2855: Class field 'name' defined by the parent class is not accessible in the child class via super.
        }
        sayHello(): void {
            // super property in a nested lambda in a method
            var superName = () => () => () => super.name;
                                                    ~~~~
!!! error TS2855: Class field 'name' defined by the parent class is not accessible in the child class via super.
        }
    }
    
    class RegisteredUser4 extends User {
        name: string = "Mark";
        constructor() {
            super();
    
            // super in a nested lambda in a constructor 
            var x = () => () => super;
                                     ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        }
        sayHello(): void {
            // super in a nested lambda in a method
            var x = () => () => super;
                                     ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        }
    }